plugins {
    id 'dev.architectury.loom' version '1.7-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.gradleup.shadow' version '8.3.6' apply false
}

architectury {
    minecraft = project.minecraft_version
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'

    loom.silentMojangMappingsLicense()

    repositories {
        mavenCentral()
        maven {
            url = "https://maven.shedaniel.me/"
        }
        maven {
            url = "https://jitpack.io"
        }
        maven {
            url = "https://maven.bai.lol"
        }.content {
            includeGroup("lol.bai")
            includeGroup("mcp.mobius.waila")
        }
        maven {
            url = "https://cursemaven.com"
        }.content { includeGroup("curse.maven") }
//        maven("https://maven.enginehub.org/repo/")
        maven {
            url = "https://maven.parchmentmc.org"
        }
        maven {
            url = "https://maven.blamejared.com/"
        }
    }

    base {
        archivesName = project.archives_base_name
    }


    loom {
        silentMojangMappingsLicense()
    }


    dependencies {
        minecraft "com.mojang:minecraft:$project.minecraft_version"
        mappings loom.officialMojangMappings()
//            loom.layered {
//                officialMojangMappings()
//                "org.parchmentmc.data:parchment-$project.minecraft_version:${project.parchment@zip"
//            }
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }
}

allprojects {
    version = project.properties["mod_version"] as String
    group = project.properties["maven_group"] as String
}
